--- a/src/i18n/el_GR.json
+++ b/src/i18n/el_GR.json
@@ -6,7 +6,7 @@
   "app.name": "Cider",
   "date.format": "${d} ${m}, ${y}",
   "dialog.cancel": "Ακύρωση",
-  "dialog.ok": "ΟΚ",
+  "dialog.ok": "Εντάξει",
   "notification.updatingLibrarySongs": "Ενημέρωση βιβλιοθήκης τραγουδιών...",
   "notification.updatingLibraryAlbums": "Ενημέρωση βιβλιοθήκης άλμπουμ...",
   "notification.updatingLibraryArtists": "Ενημέρωση βιβλιοθήκης καλλιτεχνών...",
@@ -170,7 +170,7 @@
   "term.people": "Άτομα",
   "term.newpreset.name": "Νέο όνομα προρύθμισης EQ",
   "term.addedpreset": "Η προρύθμιση προστέθηκε",
-  "term.deletepreset.warn": "Θέλετε σίγουρα να διαγράψετε αυτή τη προρύθμιση;",
+  "term.deletepreset.warn": "Θέλετε σίγουρα να διαγράψετε αυτή την προρύθμιση;",
   "term.deletedpreset": "Η προρύθμιση αφαιρέθηκε",
   "term.defaultPresets": "Προκαθορισμένες προρυθμίσεις",
   "term.userPresets": "Προρυθμίσεις χρήστη",
@@ -214,8 +214,10 @@
   "term.zoomreset": "Επαναφορά ζουμ",
   "term.fullscreen": "Πλήρης οθόνη",
   "term.nowPlaying": "Παίζει τώρα",
+  "term.localFiles": "Τοπικά αρχεία",
   "home.syncFavorites": "Συγχρονισμός αγαπημένων",
   "home.syncFavorites.gettingArtists": "Λήψη αγαπημένων καλλιτεχνών...",
+  "home.pinnedItems": "Καρφιτσωμένα στοιχεία",
   "action.favorite": "Αγαπημένο",
   "action.removeFavorite": "Αφαίρεση αγαπημένου",
   "action.refresh": "Ανανέωση",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Αφαιρέθηκε από την ουρά",
   "action.removeFromQueue.error": "Σφάλμα αφαίρεσης από την ουρά",
   "action.createPlaylist": "Δημιουργία νέας λίστας αναπαραγωγής",
-  "action.addToPlaylist.duplicate": "Το στοιχείο υπάρχει ήδη στη λίστα. Θέλετε να συνεχίσετε;",
   "action.addToPlaylist": "Προσθήκη σε λίστα",
+  "action.addToPlaylist.duplicate": "Το στοιχείο υπάρχει ήδη στη λίστα. Θέλετε να συνεχίσετε;",
   "action.removeFromPlaylist": "Αφαίρεση από λίστα",
   "action.addToFavorites": "Προσθήκη στα αγαπημένα",
   "action.follow": "Ακολούθηση",
@@ -273,7 +275,7 @@
   "action.follow.error": "Σφάλμα ακολούθησης",
   "action.unfollow": "Διακοπή ακολούθησης",
   "action.unfollow.success": "Έγινε διακοπή ακολούθησης",
-  "action.unfollow.error": "Σφάλμα διακοπής ακολούθησης ",
+  "action.unfollow.error": "Σφάλμα διακοπής ακολούθησης",
   "action.playNext": "Αναπαραγωγή ως επόμενου",
   "action.playLater": "Αναπαραγωγή αργότερα",
   "action.startRadio": "Έναρξη ραδιοφώνου",
@@ -342,7 +344,7 @@
   "settings.option.general.resumebehavior": "Συμπεριφορά συνέχισης",
   "settings.option.general.resumebehavior.description": "Η συμπεριφορά συνέχισης επηρεάζει τον τρόπο με τον οποίο ο Cider θα συνεχίσει τη συνεδρία σας όταν επιστρέψετε στην εφαρμογή.",
   "settings.option.general.resumebehavior.locally": "Τοπικό",
-  "settings.option.general.resumebehavior.locally.description": "Ο Cider θα συνεχίσει την τελευταία συνεδρία σας αυτής της συσκευής.",
+  "settings.option.general.resumebehavior.locally.description": "Ο Cider θα συνεχίσει την τελευταία σας συνεδρία αυτής της συσκευής.",
   "settings.option.general.resumebehavior.history": "Ιστορικό",
   "settings.option.general.resumebehavior.history.description": "Ο Cider θα βάλει στην ουρά το τελευταίο τραγούδι από το συνολικό ιστορικό Apple Music όλων των συσκευών σας.",
   "settings.option.general.resumetabs": "Άνοιγμα καρτέλας στην εκκίνηση",
@@ -363,7 +365,7 @@
   "settings.option.general.keybindings.pressCombination": "Πατήστε έναν συνδυασμό δύο πλήκτρων για να ενημερώσετε τον συνδυασμό.",
   "settings.option.general.keybindings.pressEscape": "Πατήστε Esc για να πάτε πίσω.",
   "settings.notyf.general.keybindings.update.success": "Ο συνδιασμός ενημερώθηκε με επιτυχία",
-  "settings.prompt.general.keybindings.update.success": "Ο συνδιασμός ενημερώθηκε με επιτυχία. Πατήστε ΟΚ για επανεκκίνηση του Cider",
+  "settings.prompt.general.keybindings.update.success": "Ο συνδιασμός ενημερώθηκε με επιτυχία. Πατήστε Εντάξει για επανεκκίνηση του Cider",
   "settings.option.general.themeUpdateNotification": "Αυτόματος έλεγχος για ενημερώσεις θεμάτων",
   "settings.option.general.showLovedTracksInline": "Εμφάνιση των αγαπημένων τραγουδιών ενσωματωμένα",
   "settings.option.general.pagination": "Στοιχεία για εμφάνιση ανά σελίδα",
@@ -460,7 +462,7 @@
   "settings.option.audio.dbspl.display": "Οθόνη dB SPL",
   "settings.option.audio.dbspl.description": "(Για προχωρημένους) Εμφάνιση dB SPL αντί για dBFS στο ρυθμιστικό έντασης.",
   "settings.option.audio.dbfs.calibration": "Βαθμονόμηση 0 dBFS",
-  "settings.option.audio.dbfs.description": "Εισάγεται το μέγιστο dB SPL Z ζύγισης όταν ο Cider είναι στα 0 dBFS.",
+  "settings.option.audio.dbfs.description": "Εισάγετε το μέγιστο dB SPL Z ζύγισης όταν ο Cider είναι στα 0 dBFS.",
   "settings.header.visual": "Οπτικά",
   "settings.header.visual.description": "Προσαρμογή οπτικών ρυθμίσεων για το Cider.",
   "settings.option.visual.windowStyle": "Στυλ παραθύρου",
@@ -476,14 +478,18 @@
   "settings.header.visual.animatedArtworkQuality.low": "Χαμηλή",
   "settings.header.visual.animatedArtworkQuality.medium": "Μέτρια",
   "settings.header.visual.animatedArtworkQuality.high": "Υψηλή",
-  "settings.header.visual.animatedArtworkQuality.veryHigh": "Πολύ Υψηλή",
+  "settings.header.visual.animatedArtworkQuality.veryHigh": "Πολύ υψηλή",
   "settings.header.visual.animatedArtworkQuality.extreme": "Ακραία",
-  "settings.option.visual.animatedWindowBackground": "Κινούμενο Φόντο Παραθύρου",
-  "settings.option.visual.hardwareAcceleration": "Επιτάχυνση Υλικού",
+  "settings.option.visual.animatedWindowBackground": "Κινούμενο φόντο παραθύρου",
+  "settings.option.visual.hardwareAcceleration": "Επιτάχυνση υλικού",
   "settings.option.visual.hardwareAcceleration.description": "Απαιτεί επανεκκίνηση",
   "settings.header.visual.hardwareAcceleration.default": "Προεπιλογή",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "Κλίμακα διεπαφής χρήστη",
+  "settings.option.visual.useAdaptiveColors": "Χρήση δυναμικών χρωμάτων",
+  "settings.option.visual.useAdaptiveColors.description": "Αλλαγή του χρώματος έμφασης για να ταιριάζει με το τρέχον τραγούδι",
+  "settings.option.visual.layoutProfile": "Τύπος προφίλ διάταξης",
+  "settings.option.visual.layoutProfile.description": "Προσαρμογή της διάταξης της εφαρμογής σύμφωνα με τις προτιμήσεις σας",
   "settings.header.visual.theme": "Θέμα",
   "settings.option.visual.theme.github.download": "Εγκατάσταση από σύνδεσμο GitHub",
   "settings.option.visual.theme.github.openfolder": "Άνοιγμα φακέλου θεμάτων",
@@ -494,7 +500,7 @@
   "settings.prompt.visual.theme.uninstallTheme": "Θέλετε σίγουρα να απεγκαταστήσετε το θέμα {{ theme }};",
   "settings.option.visual.theme.checkForUpdates": "Έλεγχος για ενημερώσεις",
   "settings.header.visual.styles": "Στυλ",
-  "settings.option.visual.theme.manageStyles": "Διαχείρισή στυλ",
+  "settings.option.visual.theme.manageStyles": "Διαχείριση στυλ",
   "settings.option.visual.theme.uninstall": "Απεγκατάσταση",
   "settings.option.visual.theme.viewInfo": "Εμφάνιση πληροφοριών",
   "settings.option.visual.theme.github.available": "Διαθέσιμα",
@@ -508,17 +514,18 @@
   "settings.header.visual.plugin.github.page": "Πρόσθετα από το GitHub",
   "settings.option.visual.plugin.github.install.confirm": "Θέλετε σίγουρα να εγκαταστήσετε το πρόσθετο {{ repo }};",
   "settings.prompt.visual.plugin.github.URL": "Εισάγετε τον σύνδεσμο του πρόσθετου που θέλετε να εγκαταστήσετε",
-  "settings.prompt.visual.plugin.github.success": "Το πρόσθετο εγκαταστάθηκε με επιτυχία, πατήστε ΟΚ για επανεκκίνηση του Cider",
+  "settings.prompt.visual.plugin.github.success": "Το πρόσθετο εγκαταστάθηκε με επιτυχία, πατήστε Εντάξει για επανεκκίνηση του Cider",
   "settings.notyf.visual.plugin.install.success": "Το πρόσθετο εγκαταστάθηκε με επιτυχία",
   "settings.notyf.visual.plugin.install.error": "Αποτυχία εγκατάστασης του πρόσθετου",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Σκοτεινό",
+  "settings.option.visual.theme.light": "Φωτεινό",
   "settings.option.visual.showPersonalInfo": "Εμφάνιση προσωπικών στοιχείων",
   "settings.header.window": "Παράθυρο",
   "settings.header.window.description": "Προσαρμογή ρυθμίσεων παραθύρου για το Cider.",
   "settings.option.window.openOnStartup": "Άνοιγμα του Cider στην εκκίνηση",
   "settings.option.window.openOnStartup.hidden": "Άνοιγμα κρυμμένο",
-  "settings.option.window.useNativeTitleBar": "Χρήση γραμμής τίτλου του συστήμστος",
+  "settings.option.window.useNativeTitleBar": "Χρήση γραμμής τίτλου του συστήματος",
   "settings.option.window.windowControlStyle": "Στυλ ελέγχου παραθύρου",
   "settings.option.window.windowControlStyle.right": "Δεξιά",
   "settings.option.window.windowControlStyle.left": "Αριστερά",
@@ -580,7 +587,7 @@
   "settings.option.visual.transparent.description": "χρειάζεται υποστήριξη θέματος, απαιτεί επανεκκίνηση",
   "settings.option.visual.customAccentColor": "Προσαρμοσμένο χρώμα έμφασης",
   "settings.option.visual.accentColor": "Χρώμα έμφασης",
-  "settings.option.visual.purplePodcastPlaybackBar": "Μωβ γραμμή αναπαραγωγής για Podcast",
+  "settings.option.visual.purplePodcastPlaybackBar": "Μωβ γραμμή αναπαραγωγής για podcast",
   "settings.option.visual.compactArtistHeader": "Συμπαγής κεφαλίδα καλλιτέχνη",
   "settings.option.visual.windowColor": "Χρώμα απόχρωσης παραθύρου",
   "settings.header.visual.windowBackgroundStyle.color": "Χρώμα απόχρωσης",
