--- a/src/i18n/en_OWO.json
+++ b/src/i18n/en_OWO.json
@@ -214,8 +214,10 @@
   "term.zoomreset": "Weset Zoom",
   "term.fullscreen": "Fuwwscween",
   "term.nowPlaying": "Nyow Pwaying",
+  "term.localFiles": "Wocaw Fiwes",
   "home.syncFavorites": "Sync Favowites",
   "home.syncFavorites.gettingArtists": "Getting Favowited Awtists...",
+  "home.pinnedItems": "Pinnyed Items",
   "action.favorite": "Favowite",
   "action.removeFavorite": "Wemuv Favowite",
   "action.refresh": "Wefwesh",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Wemuvd fwom Queue",
   "action.removeFromQueue.error": "Ewwow Wemoving fwom Queue",
   "action.createPlaylist": "Cweate a Nyew Pwaywist",
-  "action.addToPlaylist.duplicate": "Item awweady exists in pwaywist. Do you want to continyue?",
   "action.addToPlaylist": "Add to Pwaywist",
+  "action.addToPlaylist.duplicate": "Item awweady exists in pwaywist. Do you want to continyue?",
   "action.removeFromPlaylist": "Wemuv fwom Pwaywist",
   "action.addToFavorites": "Add to Favowites",
   "action.follow": "Fowwow",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Defauwt",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "UI Scawe",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Cowows",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent cowow to match the cuwwent song",
+  "settings.option.visual.layoutProfile": "Wayout Pwofiwe Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the wayout of the app to youw pwefewence",
   "settings.header.visual.theme": "Theme",
   "settings.option.visual.theme.github.download": "Instaww fwom GitHub UWW",
   "settings.option.visual.theme.github.openfolder": "Open Themes Fowdew",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "Pwugin instawwation faiwed",
   "settings.option.visual.theme.default": "Cidew",
   "settings.option.visual.theme.dark": "Dawk",
+  "settings.option.visual.theme.light": "Wight",
   "settings.option.visual.showPersonalInfo": "Show Pewsonyaw Info",
   "settings.header.window": "Window",
   "settings.header.window.description": "Adjust the window settings fow Cidew.",
