--- a/src/i18n/es_ES.json
+++ b/src/i18n/es_ES.json
@@ -214,8 +214,10 @@
   "term.zoomreset": "Restablecer",
   "term.fullscreen": "Pantalla Completa",
   "term.nowPlaying": "Reproduciendo Ahora",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Sincronizar Favoritos",
   "home.syncFavorites.gettingArtists": "Consiguiendo Artistas Favoritos...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Favorito",
   "action.removeFavorite": "Eliminar Favorito",
   "action.refresh": "Actualizar",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Eliminado de la Cola",
   "action.removeFromQueue.error": "Error al Eliminar de la Cola",
   "action.createPlaylist": "Crear una nueva lista de reproducción",
-  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.addToPlaylist": "Agregar a lista de reproducción",
+  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.removeFromPlaylist": "Eliminar de la lista de reproducción",
   "action.addToFavorites": "Agregar a Favoritos",
   "action.follow": "Seguir",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Por defecto",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "Escalado de IU",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Tema",
   "settings.option.visual.theme.github.download": "Instalar desde la URL de GitHub",
   "settings.option.visual.theme.github.openfolder": "Abrir Carpeta de Temas",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "La instalación del Plugin Falló",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Oscuro",
+  "settings.option.visual.theme.light": "Light",
   "settings.option.visual.showPersonalInfo": "Mostrar información personal",
   "settings.header.window": "Ventana",
   "settings.header.window.description": "Ajuste la configuración de la ventana para Cider.",
