--- a/src/i18n/fr_FR.json
+++ b/src/i18n/fr_FR.json
@@ -214,8 +214,10 @@
   "term.zoomreset": "Zoom arrière",
   "term.fullscreen": "Plein écran",
   "term.nowPlaying": "Now Playing",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Sync Favorites",
   "home.syncFavorites.gettingArtists": "Getting Favorited Artists...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Favorite",
   "action.removeFavorite": "Remove Favorite",
   "action.refresh": "Refresh",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Retiré de la file d'attente",
   "action.removeFromQueue.error": "Erreur lors du retrait de la file d'attente",
   "action.createPlaylist": "Créer une nouvelle playlist",
-  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.addToPlaylist": "Ajouter à une playlist",
+  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.removeFromPlaylist": "Retirer de la playlist",
   "action.addToFavorites": "Ajouter aux favoris",
   "action.follow": "Suivre",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Défaut",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "Échelle de l'interface utilisateur",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Thème",
   "settings.option.visual.theme.github.download": "Installer à partir d'une URL GitHub",
   "settings.option.visual.theme.github.openfolder": "Ouvrir le dossier des thèmes",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "L'installation du plugin a échoué",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Sombre",
+  "settings.option.visual.theme.light": "Light",
   "settings.option.visual.showPersonalInfo": "Afficher vos informations personnelles",
   "settings.header.window": "Fenêtre",
   "settings.header.window.description": "Ajustez les paramètres de la fenêtre pour Cider.",
