--- a/src/i18n/ja_JP.json
+++ b/src/i18n/ja_JP.json
@@ -11,7 +11,7 @@
   "notification.updatingLibraryAlbums": "ライブラリの更新中...",
   "notification.updatingLibraryArtists": "ライブラリの更新中...",
   "notification.buildingPlaylistCache": "プレイリストのキャッシュを構築中...",
-  "term.variables": "Variables",
+  "term.variables": "変数",
   "term.appleInc": "Apple Inc.",
   "term.appleMusic": "Apple Music",
   "term.applePodcasts": "Apple Podcasts",
@@ -22,7 +22,7 @@
   "term.accountSettings": "アカウント設定",
   "term.logout": "サインアウト",
   "term.login": "サインイン",
-  "term.quickNav": "Quick Nav",
+  "term.quickNav": "クイックナビ",
   "term.about": "Ciderについて",
   "term.privateSession": "プライベートセッション",
   "term.disablePrivateSession": "プライベートセッションを無効にする",
@@ -145,8 +145,8 @@
   "term.language": "言語",
   "term.funLanguages": "Fun",
   "term.noLyrics": "ロード中... / 歌詞が見つかりません / インストゥルメンタル.",
-  "term.copyright": "Copyright",
-  "term.rightsReserved": "All Rights Reserved.",
+  "term.copyright": "著作権",
+  "term.rightsReserved": "全著作権所有。",
   "term.sponsor": "スポンサーになりましょう",
   "term.ciderTeam": "Cider チーム",
   "term.developer": "開発者",
@@ -214,12 +214,14 @@
   "term.zoomreset": "ズームをリセット",
   "term.fullscreen": "全画面",
   "term.nowPlaying": "再生中",
+  "term.localFiles": "ローカルファイル",
   "home.syncFavorites": "お気に入りを同期",
   "home.syncFavorites.gettingArtists": "お気に入りのアーティストを同期中...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "お気に入り",
   "action.removeFavorite": "お気に入りを解除",
   "action.refresh": "更新",
-  "action.save": "Save",
+  "action.save": "保存",
   "home.title": "ホーム",
   "home.recentlyPlayed": "最近の再生",
   "home.recentlyAdded": "最近追加した項目",
@@ -232,12 +234,12 @@
   "error.connectionError": "Apple Musicに接続できません。",
   "error.noResults": "見つかりませんでした",
   "error.noResults.description": "もう一度お試しください。",
-  "error.musickitError": "MusicKit Encountered an Error: ",
+  "error.musickitError": "MusicKit でエラーが発生しました：  ",
   "podcast.followOnCider": "Ciderでフォロー",
   "podcast.followedOnCider": "フォロー中",
   "podcast.subscribeOnItunes": "iTunesで購読",
   "podcast.subscribedOnItunes": "iTunesで購読中",
-  "podcast.itunesStore": "iTunes Store",
+  "podcast.itunesStore": "iTunes ストア",
   "podcast.episodes": "番組",
   "podcast.playEpisode": "再生",
   "podcast.website": "Podcastウェブ",
@@ -249,9 +251,9 @@
   "action.delete": "削除",
   "action.edit": "編集",
   "action.done": "完了",
-  "action.submit": "Submit",
+  "action.submit": "送信",
   "action.editTracklist": "トラックリストを編集",
-  "action.editDescription": "Edit Description",
+  "action.editDescription": "説明を編集",
   "action.addToLibrary": "ライブラリに追加",
   "action.addToLibrary.success": "ライブラリに追加されました",
   "action.addToLibrary.error": "ライブラリへの追加に失敗しました",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "「次はこちら」から項目を削除されました",
   "action.removeFromQueue.error": "操作を完了できませんでした",
   "action.createPlaylist": "新しいプレイリストを作成する",
-  "action.addToPlaylist.duplicate": "既にプレイリストに入っていますが、続けますか？",
   "action.addToPlaylist": "プレイリストに追加する",
+  "action.addToPlaylist.duplicate": "既にプレイリストに入っていますが、続けますか？",
   "action.removeFromPlaylist": "プレイリストから削除する",
   "action.addToFavorites": "ラブに追加",
   "action.follow": "フォロー",
@@ -446,7 +448,7 @@
   "settings.option.audio.enableAdvancedFunctionality.audioNormalization.disabled": "Audio Labの設定",
   "settings.option.audio.enableAdvancedFunctionality.tunedAudioSpatialization": "Cider Tuned Spatialization",
   "settings.option.audio.enableAdvancedFunctionality.tunedAudioSpatialization.description": "開発チームがチューニングした設定を使用することができます。",
-  "settings.option.audio.enableAdvancedFunctionality.tunedAudioSpatialization.profile": "Cider Spatialization Profile",
+  "settings.option.audio.enableAdvancedFunctionality.tunedAudioSpatialization.profile": "Cider 空間化プロファイル",
   "settings.option.audio.enableAdvancedFunctionality.tunedAudioSpatialization.profile.description": "プロファイルをSpatializationに変更します",
   "settings.option.audio.enableAdvancedFunctionality.tunedAudioSpatialization.profile.standard": "スタンダード",
   "settings.option.audio.enableAdvancedFunctionality.tunedAudioSpatialization.profile.soundstage": "音場",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "既定",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "UI Scale",
+  "settings.option.visual.useAdaptiveColors": "アダプティブカラーを使用する",
+  "settings.option.visual.useAdaptiveColors.description": "現在の曲に合わせてアクセントカラーを変更する",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "テーマ",
   "settings.option.visual.theme.github.download": "GitHub URLからインストール",
   "settings.option.visual.theme.github.openfolder": "テーマフォルダを開く",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "プラグインのインストールに失敗しました",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "ダーク",
+  "settings.option.visual.theme.light": "ライト",
   "settings.option.visual.showPersonalInfo": "個人情報を表示する",
   "settings.header.window": "ウィンドウ",
   "settings.header.window.description": "ウィンドウの設定",
@@ -536,13 +543,13 @@
   "settings.option.connectivity.discordRPC.clientName": "クライアントの名前",
   "settings.option.connectivity.discordRPC.clearOnPause": "一時停止した時にDiscord Rich Presenceを非表示にする",
   "settings.option.connectivity.discordRPC.showActivityButtons": "Activity Button を表示",
-  "settings.option.connectivity.discordRPC.firstButton": "First Activity Button",
-  "settings.option.connectivity.discordRPC.secondButton": "Second Activity Button",
+  "settings.option.connectivity.discordRPC.firstButton": "1つ目の Activity Button を設定",
+  "settings.option.connectivity.discordRPC.secondButton": "2つ目の Activity Button を設定",
   "settings.option.connectivity.discordRPC.buttons.listenOnCider": "Cider で聴く",
   "settings.option.connectivity.discordRPC.buttons.viewOnAppleMusic": "Apple Musicで表示",
   "settings.option.connectivity.discordRPC.buttons.viewOnOtherMusicServices": "他の音楽サービスを見る",
   "settings.option.connectivity.discordRPC.showSongLink": "Discord Rich Presence で Apple Music ボタンの代わりに Song.link を表示する",
-  "settings.option.connectivity.discordRPC.hideButtons": "Hide buttons on Discord Rich Presence",
+  "settings.option.connectivity.discordRPC.hideButtons": "Discord Rich Presence のボタンを非表示にする",
   "settings.option.connectivity.discordRPC.hideTimestamp": "Discord Rich Presenceのタイムスタンプを非表示にする",
   "settings.option.connectivity.discordRPC.detailsFormat": "ディティールのフォーマット",
   "settings.option.connectivity.discordRPC.stateFormat": "状態のフォーマット",
