--- a/src/i18n/nl_NL.json
+++ b/src/i18n/nl_NL.json
@@ -214,8 +214,10 @@
   "term.zoomreset": "Zoom resetten",
   "term.fullscreen": "Volledig scherm",
   "term.nowPlaying": "Speelt nu",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Favorieten synchroniseren",
   "home.syncFavorites.gettingArtists": "Favoriete artiesten ophalen...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Favoriet",
   "action.removeFavorite": "Verwijder uit favorieten",
   "action.refresh": "Herladen",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Verwijderd uit wachtrij",
   "action.removeFromQueue.error": "Fout bij verwijderen uit wachtrij",
   "action.createPlaylist": "Maak een nieuwe afspeellijst",
-  "action.addToPlaylist.duplicate": "Dit nummer staat al in je afspeellijst. Wilt u hem alsnog toevoegen?",
   "action.addToPlaylist": "Zet in een afspeellijst",
+  "action.addToPlaylist.duplicate": "Dit nummer staat al in je afspeellijst. Wilt u hem alsnog toevoegen?",
   "action.removeFromPlaylist": "Verwijder uit afspeellijst",
   "action.addToFavorites": "Toevoegen aan favorieten",
   "action.follow": "Volgen",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Standaard",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "UI-schaal",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Thema",
   "settings.option.visual.theme.github.download": "Installeren vanuit GitHub-URL",
   "settings.option.visual.theme.github.openfolder": "Themamap openen",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "Installatie van plug-in mislukt",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Donker",
+  "settings.option.visual.theme.light": "Light",
   "settings.option.visual.showPersonalInfo": "Toon persoonlijke informatie",
   "settings.header.window": "Venster",
   "settings.header.window.description": "Pas de vensterinstellingen voor Cider aan.",
