--- a/src/i18n/pl_PL.json
+++ b/src/i18n/pl_PL.json
@@ -43,7 +43,7 @@
   "term.browse": "Przeglądaj",
   "term.radio": "Radio",
   "term.recentlyAdded": "Ostatnio dodane",
-  "term.songs": "Piosenki",
+  "term.songs": "Utwory",
   "term.albums": "Albumy",
   "term.artists": "Artyści",
   "term.podcasts": "Podcasty",
@@ -68,8 +68,8 @@
   "term.enableShuffle": "Włącz odtwarzanie losowe",
   "term.disableShuffle": "Wyłącz odtwarzanie losowe",
   "term.repeat": "Powtarzaj",
-  "term.enableRepeatOne": "Włącz powtarzanie pojedynczej piosenki",
-  "term.disableRepeatOne": "Wyłącz powtarzanie pojedynczej piosenki",
+  "term.enableRepeatOne": "Włącz powtarzanie pojedynczego utworu",
+  "term.disableRepeatOne": "Wyłącz powtarzanie pojedynczego utworu",
   "term.disableRepeat": "Wyłącz powtarzanie",
   "term.volume": "Głośność",
   "term.mute": "Wycisz",
@@ -109,7 +109,7 @@
   "term.less": "Mniej",
   "term.showMore": "Pokaż więcej",
   "term.showLess": "Pokaż mniej",
-  "term.topSongs": "Najpopularniejsze piosenki",
+  "term.topSongs": "Najpopularniejsze utwory",
   "term.latestReleases": "Najnowsze wydania",
   "term.time.added": "Dodane",
   "term.time.released": "Wydane",
@@ -193,7 +193,7 @@
   "term.replay": "Odtwórz ponownie",
   "term.uniqueAlbums": "Unikalne albumy",
   "term.uniqueArtists": "Unikalni artyści",
-  "term.uniqueSongs": "Unikalne piosenki",
+  "term.uniqueSongs": "Unikalne utwory",
   "term.topArtists": "Top artyści",
   "term.listenedTo": "Słuchano:",
   "term.times": "razy",
@@ -214,8 +214,10 @@
   "term.zoomreset": "Resetuj przybliżenie",
   "term.fullscreen": "Pełny ekran",
   "term.nowPlaying": "Teraz odtwarzane",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Synchronizuj ulubione",
   "home.syncFavorites.gettingArtists": "Synchronizuję ulubionych artystów...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Ulubiony",
   "action.removeFavorite": "Usuń ulubiony",
   "action.refresh": "Odśwież",
@@ -250,7 +252,7 @@
   "action.edit": "Edytuj",
   "action.done": "Zrobione",
   "action.submit": "Potwierdź",
-  "action.editTracklist": "Edytuj listę piosenek",
+  "action.editTracklist": "Edytuj listę utworów",
   "action.editDescription": "Edytuj opis",
   "action.addToLibrary": "Dodaj do biblioteki",
   "action.addToLibrary.success": "Dodano do biblioteki",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Usunięto z kolejki",
   "action.removeFromQueue.error": "Błąd przy próbie usunięcia z kolejki",
   "action.createPlaylist": "Stwórz nową playlistę",
-  "action.addToPlaylist.duplicate": "Pozycja już istnieje na playliście. Chcesz kontynuować?",
   "action.addToPlaylist": "Dodaj do playlisty",
+  "action.addToPlaylist.duplicate": "Pozycja już istnieje na playliście. Chcesz kontynuować?",
   "action.removeFromPlaylist": "Usuń z playlisty",
   "action.addToFavorites": "Dodaj do ulubionych",
   "action.follow": "Obserwuj",
@@ -289,9 +291,9 @@
   "action.dislike": "Nie lubię",
   "action.undoDislike": "Cofnij dislike",
   "action.showWebRemoteQR": "Web Remote",
-  "action.playTracksNext": "Otwórz ${app.selectedMediaItems.length} zaznaczone piosenki jako następne",
-  "action.playTracksLater": "Otwórz ${app.selectedMediaItems.length} zaznaczone piosenki później",
-  "action.removeTracks": "Usuń ${self.selectedItems.length} zaznaczone piosenki z kolejki",
+  "action.playTracksNext": "Otwórz ${app.selectedMediaItems.length} zaznaczone utwory jako następne",
+  "action.playTracksLater": "Otwórz ${app.selectedMediaItems.length} zaznaczone utwory później",
+  "action.removeTracks": "Usuń ${self.selectedItems.length} zaznaczone utwory z kolejki",
   "action.import": "Importuj",
   "action.export": "Eksportuj",
   "action.showAlbum": "Pokaż cały album",
@@ -344,7 +346,7 @@
   "settings.option.general.resumebehavior.locally": "Lokalnie",
   "settings.option.general.resumebehavior.locally.description": "Cider przywróci ostatnią sesję zapamiętaną na tym komputerze.",
   "settings.option.general.resumebehavior.history": "Historia",
-  "settings.option.general.resumebehavior.history.description": "Cider wrzuci do kolejki ostatnią piosenkę z Twojej historii Apple Music, niezależnie od urządzenia",
+  "settings.option.general.resumebehavior.history.description": "Cider wrzuci do kolejki ostatni utwór z Twojej historii Apple Music, niezależnie od urządzenia",
   "settings.option.general.resumetabs": "Otwórz kartę przy starcie",
   "settings.option.general.resumetabs.description": "Możesz wybrać jaką kartę chcesz otworzyć przy starcie Cider.",
   "settings.option.general.resumetabs.dynamic": "Dynamicznie",
@@ -367,7 +369,7 @@
   "settings.option.general.themeUpdateNotification": "Automatycznie sprawdzaj aktualizacje motywów",
   "settings.option.general.showLovedTracksInline": "Show loved tracks inline",
   "settings.option.general.pagination": "Liczba pozycji na stronę",
-  "settings.options.general.pagination.description": "Określa ile piosenek/albumów wstępnie wyświetlić podczas nieskończonego przewijania lub ile piosenek/albumów pokazać na jednej stronie.",
+  "settings.options.general.pagination.description": "Określa ile utworów/albumów wstępnie wyświetlić podczas nieskończonego przewijania lub ile utworów/albumów pokazać na jednej stronie.",
   "settings.description.search": "Szukaj",
   "settings.description.albums": "Albumy w bibliotece",
   "settings.description.artists": "Atryści w bibliotece",
@@ -381,7 +383,7 @@
   "settings.description.developer": "Ustawienia programisty",
   "settings.description.listnow": "Słuchaj teraz",
   "settings.description.recentAdd": "Ostatnio dodane",
-  "settings.description.songs": "Piosenki",
+  "settings.description.songs": "Utwory",
   "settings.notyf.updateCider.update-not-available": "Brak dostępnych aktualizacji",
   "settings.notyf.updateCider.update-downloaded": "Aktualizacja została pobrana, uruchom ponownie, aby zainstalować",
   "settings.notyf.updateCider.update-timeout": "Aktualizacja - przekroczono limit czasu",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Domyślnie",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "Skalowanie interfejsu",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Motyw",
   "settings.option.visual.theme.github.download": "Instaluj z linka GitHub",
   "settings.option.visual.theme.github.openfolder": "Otwórz folder motywów",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "Nie udało się zainstalować plugina",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Ciemny",
+  "settings.option.visual.theme.light": "Light",
   "settings.option.visual.showPersonalInfo": "Pokaż informacje osobiste",
   "settings.header.window": "Okno",
   "settings.header.window.description": "Dostosuj ustawienia okienka Cider.",
@@ -523,7 +530,7 @@
   "settings.option.window.windowControlStyle.right": "Z prawej",
   "settings.option.window.windowControlStyle.left": "Z lewej",
   "settings.header.lyrics": "Tekst",
-  "settings.header.lyrics.description": "Dostosuj ustawienia tekstu piosenek.",
+  "settings.header.lyrics.description": "Dostosuj ustawienia tekstu utworów.",
   "settings.option.lyrics.enableMusixmatch": "Włącz tekst Musixmatch",
   "settings.option.lyrics.enableMusixmatchKaraoke": "Włącz Tryb Karaoke (tylko dla Musixmatch)",
   "settings.option.lyrics.musixmatchPreferredLanguage": "Automatyczne tłumaczenie tekstu Musixmatch",
@@ -551,9 +558,9 @@
   "settings.option.connectivity.lastfmScrobble": "Scrobblowanie Last.fm",
   "settings.option.connectivity.lastfmScrobble.delay": "Opóźnienie scrobblowania Last.fm (%)",
   "settings.option.connectivity.lastfmScrobble.nowPlaying": "Włącz Last.fm Teraz Odtwarzane",
-  "settings.option.connectivity.lastfmScrobble.removeFeatured": "Usuń gościnnych artystów z tytułu piosenki (Last.fm)",
-  "settings.option.connectivity.lastfmScrobble.filterLoop": "Filtruj zapętlone piosenki (Last.fm)",
-  "settings.option.connectivity.lastfmScrobble.filterLoop.description": "Zapobiega scrobblowaniu / wyświetlaniu w Teraz Odtwarzane zapętlonych piosenek (Last.fm)",
+  "settings.option.connectivity.lastfmScrobble.removeFeatured": "Usuń gościnnych artystów z tytułu utworu (Last.fm)",
+  "settings.option.connectivity.lastfmScrobble.filterLoop": "Filtruj zapętlone utwory (Last.fm)",
+  "settings.option.connectivity.lastfmScrobble.filterLoop.description": "Zapobiega scrobblowaniu / wyświetlaniu w Teraz Odtwarzane zapętlonych utworów (Last.fm)",
   "settings.option.connectivity.lastfmScrobble.filterTypes": "Filtruj rodzaje multimediów (Last.fm)",
   "settings.option.connectivity.lastfmScrobble.filterTypes.description": "Zapobiega scrobblowaniu / wyświetlaniu w Teraz Odtwarzane multimediów określonego typu (Last.fm)",
   "settings.option.connectivity.lastfmScrobble.manualToken": "Wprowadź token Last.fm ręcznie",
