--- a/src/i18n/pt_PT.json
+++ b/src/i18n/pt_PT.json
@@ -214,8 +214,10 @@
   "term.zoomreset": "Repor zoom",
   "term.fullscreen": "Ecrã inteiro",
   "term.nowPlaying": "Em reprodução",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Sincronizar favoritos",
   "home.syncFavorites.gettingArtists": "A obter os artistas favoritos...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Adicionar favorito",
   "action.removeFavorite": "Remover favorito",
   "action.refresh": "Atualizar",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Removido da fila",
   "action.removeFromQueue.error": "Erro ao remover da fila",
   "action.createPlaylist": "Criar uma nova lista de reprodução",
-  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.addToPlaylist": "Adicionar à lista de reprodução",
+  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.removeFromPlaylist": "Removar da lista de reprodução",
   "action.addToFavorites": "Adicionar aos favoritos",
   "action.follow": "Seguir",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Padrão",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "Escala da UI",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Tema",
   "settings.option.visual.theme.github.download": "Instalar a partir de um URL do GitHub",
   "settings.option.visual.theme.github.openfolder": "Abrir pasta de temas",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "A instalação do plug-in falhou",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Escuro",
+  "settings.option.visual.theme.light": "Light",
   "settings.option.visual.showPersonalInfo": "Mostrar informação pessoal",
   "settings.header.window": "Janela",
   "settings.header.window.description": "Ajustar as definições da janela para o Cider.",
