--- a/src/i18n/tr_TR.json
+++ b/src/i18n/tr_TR.json
@@ -214,8 +214,10 @@
   "term.zoomreset": "Reset Zoom",
   "term.fullscreen": "Fullscreen",
   "term.nowPlaying": "Now Playing",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Sync Favorites",
   "home.syncFavorites.gettingArtists": "Getting Favorited Artists...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Favorite",
   "action.removeFavorite": "Remove Favorite",
   "action.refresh": "Refresh",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Sıradan Kaldırıldı",
   "action.removeFromQueue.error": "Sıradan Kaldırılamadı",
   "action.createPlaylist": "Yeni Liste Oluştur",
-  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.addToPlaylist": "Liste'ye Ekle",
+  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.removeFromPlaylist": "Liste'den Sil",
   "action.addToFavorites": "Favorilere Ekle",
   "action.follow": "Takip Et",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Varsayılan",
   "settings.header.visual.hardwareAcceleration.webGPU": "Gelişmiş",
   "settings.option.visual.uiscale": "UI Scale",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Tema",
   "settings.option.visual.theme.github.download": "GitHub URL'sinden yükleyin",
   "settings.option.visual.theme.github.openfolder": "Open Themes Folder",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "Eklenti kurulumu başarısız oldu",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Karanlık",
+  "settings.option.visual.theme.light": "Light",
   "settings.option.visual.showPersonalInfo": "Kullanıcı Adımı Göster",
   "settings.header.window": "Pencere",
   "settings.header.window.description": "Cider için pencere ayarlarını yapın.",
