--- a/src/i18n/hu_HU.json
+++ b/src/i18n/hu_HU.json
@@ -79,7 +79,7 @@
   "term.settings": "Beállítások",
   "term.seeAll": "Összes",
   "term.sortBy": "Rendezés",
-  "term.sortBy.album": "Album",
+  "term.sortBy.album": "Albumok",
   "term.sortBy.artist": "Előadó",
   "term.sortBy.name": "Név",
   "term.sortBy.genre": "Műfaj",
@@ -214,12 +214,14 @@
   "term.zoomreset": "Nagyítás visszaállítása",
   "term.fullscreen": "Teljes képernyő",
   "term.nowPlaying": "Jelenleg lejátszás alatt",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Kedvencek szinkronizálása",
   "home.syncFavorites.gettingArtists": "Kedvenc előadók betöltése..",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Kedvenc",
   "action.removeFavorite": "Eltávolítás a kedvencek közül",
   "action.refresh": "Frissítés",
-  "action.save": "Save",
+  "action.save": "Mentés",
   "home.title": "Kezdőlap",
   "home.recentlyPlayed": "Nemrég játszott",
   "home.recentlyAdded": "Nemrég hozzáadott",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Törölve a várólistáról",
   "action.removeFromQueue.error": "Sikertelen törlés a várólistáról",
   "action.createPlaylist": "Új lejátszási lista létrehozása",
-  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.addToPlaylist": "Lejátszási listához adás",
+  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.removeFromPlaylist": "Törlés a lejátszási listáról",
   "action.addToFavorites": "Hozzáadás a kedvencekhez",
   "action.follow": "Követés",
@@ -335,7 +337,7 @@
   "menubar.options.trans": "Fordítással kapcsolatos bejelentés/kérelem",
   "menubar.options.license": "Licensz megtekintése",
   "menubar.options.conf": "Open Configuration File in Editor",
-  "menubar.options.zoom": "Zoom",
+  "menubar.options.zoom": "Nagyítás",
   "settings.header.general": "Általános",
   "settings.header.general.description": "A Cider általános beállításainak módosítása.",
   "settings.option.general.language": "Nyelv",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Alap",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "Nagyítás mértéke",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Téma",
   "settings.option.visual.theme.github.download": "Telepítés GitHub URL-ről",
   "settings.option.visual.theme.github.openfolder": "Témák mappa megnyitása",
@@ -502,7 +508,7 @@
   "settings.notyf.visual.theme.updateAvailable": "[Themes] {{ theme }} has an update available",
   "settings.notyf.visual.theme.install.success": "Téma sikeresen telepítve",
   "settings.notyf.visual.theme.install.error": "Sikertelen volt a téma telepítése",
-  "settings.header.visual.plugin": "Plugin",
+  "settings.header.visual.plugin": "Plug-in",
   "settings.option.visual.plugin.github.download": "Telepítés GitHub URL-ről",
   "settings.option.visual.plugin.github.explore": "Pluginok felfedezése",
   "settings.header.visual.plugin.github.page": "Pluginok a GitHub-ról",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "Sikertelen volt a plugin telepítése",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Sötét",
+  "settings.option.visual.theme.light": "Világos",
   "settings.option.visual.showPersonalInfo": "Személyes adatok megjelenítése",
   "settings.header.window": "Ablak",
   "settings.header.window.description": "A Cider ablakbeállításainak módosítása.",
