--- a/src/i18n/ru_RU.json
+++ b/src/i18n/ru_RU.json
@@ -10,7 +10,7 @@
   "notification.updatingLibrarySongs": "Обновление медиатеки песен...",
   "notification.updatingLibraryAlbums": "Обновление медиатеки альбомов...",
   "notification.updatingLibraryArtists": "Обновление медиатеки артистов...",
-  "notification.buildingPlaylistCache": "Building Playlist Cache...",
+  "notification.buildingPlaylistCache": "Кэширую плейлисты...",
   "term.variables": "Переменные",
   "term.appleInc": "Apple Inc.",
   "term.appleMusic": "Apple Music",
@@ -214,8 +214,10 @@
   "term.zoomreset": "Сбросить масштаб",
   "term.fullscreen": "Полный экран",
   "term.nowPlaying": "Сейчас играет",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Синхронизировать",
   "home.syncFavorites.gettingArtists": "Получение отслеживаемых исполнителей...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Отслеживать",
   "action.removeFavorite": "Перестать отслеживать",
   "action.refresh": "Обновить",
@@ -232,7 +234,7 @@
   "error.connectionError": "Возникла проблема с подключением к Apple Music.",
   "error.noResults": "Нет результатов.",
   "error.noResults.description": "Попробуйте ещё раз.",
-  "error.musickitError": "MusicKit Encountered an Error: ",
+  "error.musickitError": "MusicKit столкнулся с ошибкой:",
   "podcast.followOnCider": "Отслеживать в Cider",
   "podcast.followedOnCider": "Отслеживаемые в Cider",
   "podcast.subscribeOnItunes": "Подписаться в iTunes",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Удалено из очереди",
   "action.removeFromQueue.error": "Ошибка удаления из очереди",
   "action.createPlaylist": "Создать новый плейлист",
-  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.addToPlaylist": "Добавить в плейлист",
+  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.removeFromPlaylist": "Удалить из плейлиста",
   "action.addToFavorites": "Добавить в избранное",
   "action.follow": "Отслеживать",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "По умолчанию",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "Размер интерфейса",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Тема",
   "settings.option.visual.theme.github.download": "Установить с GitHub",
   "settings.option.visual.theme.github.openfolder": "Открыть папку с темами",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "Установка плагина не удалась",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Тёмная",
+  "settings.option.visual.theme.light": "Light",
   "settings.option.visual.showPersonalInfo": "Показать личную информацию",
   "settings.header.window": "Окно",
   "settings.header.window.description": "Настройки окна Cider.",
