--- a/src/i18n/vi_VN.json
+++ b/src/i18n/vi_VN.json
@@ -214,8 +214,10 @@
   "term.zoomreset": "Reset Zoom",
   "term.fullscreen": "Fullscreen",
   "term.nowPlaying": "Now Playing",
+  "term.localFiles": "Local Files",
   "home.syncFavorites": "Sync Favorites",
   "home.syncFavorites.gettingArtists": "Getting Favorited Artists...",
+  "home.pinnedItems": "Pinned Items",
   "action.favorite": "Favorite",
   "action.removeFavorite": "Remove Favorite",
   "action.refresh": "Refresh",
@@ -264,8 +266,8 @@
   "action.removeFromQueue.success": "Đã xoá khỏi hàng đợi",
   "action.removeFromQueue.error": "Có lỗi khi xoá khỏi hàng đợi",
   "action.createPlaylist": "Tạo playlist",
-  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.addToPlaylist": "Thêm vào playlist",
+  "action.addToPlaylist.duplicate": "Item already exists in playlist. Do you want to continue?",
   "action.removeFromPlaylist": "Xoá khỏi playlist",
   "action.addToFavorites": "Thêm vào Yêu thích",
   "action.follow": "Theo dõi",
@@ -484,6 +486,10 @@
   "settings.header.visual.hardwareAcceleration.default": "Gốc",
   "settings.header.visual.hardwareAcceleration.webGPU": "WebGPU",
   "settings.option.visual.uiscale": "UI Scale",
+  "settings.option.visual.useAdaptiveColors": "Use Adaptive Colors",
+  "settings.option.visual.useAdaptiveColors.description": "Change the accent color to match the current song",
+  "settings.option.visual.layoutProfile": "Layout Profile Type",
+  "settings.option.visual.layoutProfile.description": "Adjust the layout of the app to your preference",
   "settings.header.visual.theme": "Chủ đề",
   "settings.option.visual.theme.github.download": "Install from GitHub URL",
   "settings.option.visual.theme.github.openfolder": "Open Themes Folder",
@@ -513,6 +519,7 @@
   "settings.notyf.visual.plugin.install.error": "Plugin installation failed",
   "settings.option.visual.theme.default": "Cider",
   "settings.option.visual.theme.dark": "Tối hơn",
+  "settings.option.visual.theme.light": "Light",
   "settings.option.visual.showPersonalInfo": "Hiện thông tin cá nhân",
   "settings.header.window": "Cửa Sổ",
   "settings.header.window.description": "Thay đổi các cài đặt cửa sổ của Cider.",
